--- a/app/templates/analytics.html
+++ b/app/templates/analytics.html
@@ -48,7 +48,20 @@
       </div>
     </div>
   </div>
+  <div class="row mt-4">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-header">
+          <h5>Average Assessment Scores by Unit (%)</h5>
+        </div>
+        <div class="card-body">
+          <canvas id="assessmentChart"></canvas>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 <!-- Pass user activities data to JavaScript -->
 {% if user_activities %}
@@ -60,5 +73,7 @@
   window.userSavedActivities = [];
 </script>
 {% endif %}
-
+<script>
+  window.assessmentAverages = {{ assessment_averages | tojson }};
+</script>
 {% endblock %}
